[tool.poetry]
name = "cli"
version = "0.1.0"
description = "soteria command line client"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
click = "*"
requests-toolbelt = "*"
dacite = "*"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
